# library_service_FastAPI

./: .gitignore  Dockerfile  README.md  docker-compose.yml  library.db  pyproject.toml
library_service/: crud.py  database.py  main.py  models.py  schemas.py
